fix: とりあえず動いた

--- a/serverless.yml
+++ b/serverless.yml
@@ -44,7 +44,7 @@ custom:
           ja-JP:
             interactionModel:
               languageModel:
-                invocationName: ユータス
+                invocationName: ドラえもん
                 intents:
                 - name: DorapiIntent
                   samples:
